--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>EatWithEmily</title>
     <script
       async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=YOUR_ADSENSE_CLIENT_ID"
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=5597411605892458"
       crossorigin="anonymous"
     ></script>
   </head>
