Fixed sidebar links not working. Fixed robots.txt so it appears now with sitemap as well.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/tabicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta 
+      name="description" 
+      content="Discover delicious recipes and cooking tips with EatWithEmily. Find easy-to-follow guides for every meal." 
+    />
     <title>EatWithEmily</title>
     <script
       async
